test/fail/invalid-assign.rnp
let a 1;
---
 --> fail/invalid-assign.rnp:1:7
  |
1 | let a 1;
  |       ^ Unexpected token
  |
